FIX issue when content is hidden on safari

--- a/style/styles.css
+++ b/style/styles.css
@@ -4,7 +4,7 @@ body {
 
 #rest-of-page {
 	background-color: white;
-	z-index: -1;
+	z-index: 0;
 	position: absolute;
 	top: 100%;
 	padding-top: 50px;
@@ -32,6 +32,7 @@ body {
 }
 
 .navigation-bar-wrapper {
+	z-index: 99;
 	position: fixed;
 	width: 100%;
 	height: 75px;
